菜单api，添加菜单，菜单列表
