# docs/swagger.json
@@ -6,7 +6,7 @@
         "contact": {},
         "version": "1.0"
     },
-    "host": "192.168.43.208:8080",
+    "host": "127.0.0.1:8080",
     "basePath": "/api",
     "paths": {
         "/advert": {
@@ -132,6 +132,105 @@
                     }
                 }
             }
+        },
+        "/image_names": {
+            "get": {
+                "description": "图片名字列表",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "图片管理"
+                ],
+                "summary": "图片名字列表",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/res.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/images_api.BannerResponse"
+                                            }
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
+        "/menu": {
+            "get": {
+                "description": "菜单列表",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "菜单管理"
+                ],
+                "summary": "菜单列表",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/res.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/menu_api.MenuResponse"
+                                            }
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "菜单创建",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "菜单管理"
+                ],
+                "summary": "菜单创建",
+                "parameters": [
+                    {
+                        "description": "菜单表的参数和关联图片表参数",
+                        "name": "cr",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/menu_api.MenuRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/res.Response"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -158,6 +257,140 @@
                 "title": {
                     "description": "显示的标题",
                     "type": "string"
+                }
+            }
+        },
+        "images_api.BannerResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "description": "图片id",
+                    "type": "integer"
+                },
+                "name": {
+                    "description": "图片名称",
+                    "type": "string"
+                },
+                "path": {
+                    "description": "图片路径",
+                    "type": "string"
+                }
+            }
+        },
+        "menu_api.ImageSort": {
+            "type": "object",
+            "properties": {
+                "image_id": {
+                    "description": "图片id",
+                    "type": "integer"
+                },
+                "sort": {
+                    "description": "图片排序，例如2 其他图片可以是1 3",
+                    "type": "integer"
+                }
+            }
+        },
+        "menu_api.MenuImage": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "path": {
+                    "type": "string"
+                }
+            }
+        },
+        "menu_api.MenuRequest": {
+            "type": "object",
+            "properties": {
+                "abstract": {
+                    "description": "简介",
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "abstract_time": {
+                    "description": "简介的切换时间",
+                    "type": "integer"
+                },
+                "banner_time": {
+                    "description": "菜单图片的切换时间",
+                    "type": "integer"
+                },
+                "image_sort_list": {
+                    "description": "具体图片的循序",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/menu_api.ImageSort"
+                    }
+                },
+                "menu_title": {
+                    "description": "菜单标题",
+                    "type": "string"
+                },
+                "menu_title_en": {
+                    "description": "英文菜单标题",
+                    "type": "string"
+                },
+                "slogan": {
+                    "description": "广告",
+                    "type": "string"
+                },
+                "sort": {
+                    "description": "菜单列表排序",
+                    "type": "integer"
+                }
+            }
+        },
+        "menu_api.MenuResponse": {
+            "type": "object",
+            "properties": {
+                "abstract": {
+                    "description": "简介",
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "abstract_time": {
+                    "description": "简介的切换时间",
+                    "type": "integer"
+                },
+                "banner_time": {
+                    "description": "菜单图片的切换时间",
+                    "type": "integer"
+                },
+                "created_at": {
+                    "description": "创建时间",
+                    "type": "string"
+                },
+                "id": {
+                    "description": "主键id",
+                    "type": "integer"
+                },
+                "menuImages": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/menu_api.MenuImage"
+                    }
+                },
+                "menu_title": {
+                    "description": "菜单标题",
+                    "type": "string"
+                },
+                "menu_title_en": {
+                    "description": "英文菜单标题",
+                    "type": "string"
+                },
+                "slogan": {
+                    "description": "广告",
+                    "type": "string"
+                },
+                "sort": {
+                    "description": "菜单的循序",
+                    "type": "integer"
                 }
             }
         },
