# routers/images_router.go
@@ -8,6 +8,7 @@ import (
 func ImagesRouter(router *gin.RouterGroup) {
 	ImagesApi := api.ApiGroupApp.ImagesApi
 	router.GET("/images", ImagesApi.ImagesListView)
+	router.GET("/image_names", ImagesApi.ImagesNameListView)
 	router.POST("/images", ImagesApi.ImagesUploadView)
 	router.PUT("/images", ImagesApi.ImagesUpdateView)
 	router.DELETE("/images", ImagesApi.ImagesRemoveView)
